Java 21 updates.